--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,8 +17,7 @@
           <h4>Product</h4>
           <ul>
             <li><a href="/product">Lilo Solace</a></li>
-            <li><a href="/evidence">Clinical Evidence</a></li>
-            <li><a href="/demo">Request Demo</a></li>
+            <li><a href="/contact">Join the Community</a></li>
           </ul>
         </div>
 
